--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -1,7 +1,8 @@
 <section class="fixed-footer">
   <div class="avatar-box" onclick="window.JL.achievements.launchScreen(event)">
     <div class="avatar">
-      <img src="/img/trophy_big.svg" id="avatar-is-small">
+      <!-- <img src="/img/trophy_big.svg" id="avatar-is-small"> -->
+      ★
     </div>
   </div>
   <div class="achievement-box" id="achievement-box">
