--- a/src/layouts/master.html
+++ b/src/layouts/master.html
@@ -31,7 +31,7 @@
       <h5 class="title">Choose your avatar</h5>
     </div> -->
     <div class="achievements">
-      <h2 class="achievements-title">Achievements minigame</h2>
+      <h2 class="achievements-title">minigame</h2>
       <div class="achievements-desc">Unlock achievements as you progress throughout the site.</div>
       <div class="scores">
         <div class="achievements-score">SCORE<span id="score-ach" class="score-ach">0</span></div>
