--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{title}}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <script>
        (function() {
