updates added portfolio

--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -21,6 +21,6 @@
 <footer class="footer">
   &copy; 2015 Joey Lea. All Rights Reserved.
 </footer>
-<script src="js/jl.min.js"></script>
+<script src="/js/jl.min.js"></script>
 </body>
 </html>
