--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{title}}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <script>
        (function() {
@@ -14,4 +14,4 @@
   </script>
   <link rel="stylesheet" href="/css/1j22f.css">
 </head>
-<body onclick="window.JL.achievements.removeScreen()">
+<body onclick="window.JL.achievements.removeScreen()" ontouchstart>
