--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -18,7 +18,7 @@
 </section>
 
 
-<footer class="footer">
+<footer class="footer" onclick="JL.achievements.launchScreen(event)">
   &copy; 2015 Joey Lea. All Rights Reserved.
 </footer>
 <script src="/js/jl.min.js"></script>
