--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <section class="fixed-footer">
   <div class="avatar-box" onclick="window.JL.achievements.launchScreen(event)">
     <div class="avatar">
-      <!-- <img src="/img/trophy_big.svg" id="avatar-is-small"> -->
-      ★
+      <img src="/img/star_trophy.svg" id="avatar-is-small">
+      <!-- ★ -->
     </div>
   </div>
   <div class="achievement-box" id="achievement-box">
@@ -17,10 +17,16 @@
 
 </section>
 
-
+<nav class="footer-nav">
+  <a href="/">HOME</a>
+  <a href="/portfolio">PORTFOLIO</a>
+  <a href="/contact">CONTACT</a>
+</nav>
 <footer class="footer" onclick="JL.achievements.launchScreen(event)">
-  &copy; 2015 Joey Lea. All Rights Reserved.
+  &copy; 2016 Joey Lea. All Rights Reserved.
 </footer>
+
+</div>
 <script src="/js/jl.min.js"></script>
 </body>
 </html>
