--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -15,3 +15,4 @@
   <link rel="stylesheet" href="/css/1j22f.css">
 </head>
 <body onclick="window.JL.achievements.removeScreen()" ontouchstart>
+<div class="wrap-overflow">
